refactor: eliminate test duplication by migrating to ES modules
- Export functions from script.js (appendToDisplay, clearDisplay, etc.)
- Replace 50+ lines of duplicated function code with imports in tests
- Add ES module support: type="module" in package.json and script tag
- Configure Jest for ESM with --experimental-vm-modules flag
- Update functions to support dynamic display element resolution
- Guard event listeners from executing during test imports
- Add Test-Configuration.md documenting migration and comparing with Jasmine/Karma

Resolves DRY violation where business logic was copy-pasted into test files.
Tests now import and verify actual production code instead of duplicates.

--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "calculator",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "directories": {
     "doc": "docs",
     "test": "tests"
   },
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
+    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
     "test:integration": "jest --testMatch='**/tests/**/*.integration.test.js'",
     "test:e2e": "jest --testMatch='**/tests/**/*.e2e.spec.js'"
   },
