Refactor Jest configuration and enhance unit tests for keyboard and theme functionality
- Updated Jest config for ES module compatibility
- Improved keyboard event tests to use realistic DOM and event dispatching
- Enhanced theme toggle tests for DOM, icon, and localStorage assertions
- Ensured consistent test setup and teardown for reliable results

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "test:watch": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
-    "test:coverage": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage",
-    "test:integration": "jest --testMatch='**/tests/**/*.integration.test.js'",
-    "test:e2e": "jest --testMatch='**/tests/**/*.e2e.spec.js'"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs",
+    "test:watch": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs --watch",
+    "test:coverage": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs --coverage",
+    "test:integration": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs --testMatch='**/tests/**/*.integration.test.js'",
+    "test:e2e": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js --config jest.config.cjs --testMatch='**/tests/**/*.e2e.spec.js'"
   },
   "keywords": [],
   "author": "",
